Fix wrapping on inline code fragments

--- a/src/styles/code-format.scss
+++ b/src/styles/code-format.scss
@@ -86,6 +86,7 @@ pre[class*="language-"] {
 :not(pre) > code[class*="language-"] {
     padding: 0.05rem 0.2rem;
     border-radius: $close-corner;
+    white-space: pre-wrap;
 }
 
 a {
